[gd_scene load_steps=2 format=3 uid="uid://b4xnvklasvcqy"]

[ext_resource type="Script" uid="uid://dwekbv27vvay4" path="res://scripts/menu/credits/team_item.gd" id="1_7n7w4"]

[node name="TeamItem" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_7n7w4")

[node name="TitleLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="PeopleContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
